--- a/docs/wearables/providers/resources.mdx
+++ b/docs/wearables/providers/resources.mdx
@@ -28,7 +28,7 @@ For example:
 | Granularity | Resources       |
 | ----------- | --------------- |
 | Daily       | `activity` |
-| Session     | `sleep`, `workouts`, `body`, `meal`, `workout_stream`, `sleep_stream` |
+| Session     | `sleep`, `workouts`, `body`, `meal`, `menstrual_cycle`, `workout_stream`, `sleep_stream` |
 | Single      | `profile` |
 
 ### Discrete Timeseries types
@@ -40,7 +40,7 @@ Each value is associated with a single point in time.
 | Cardiorespiratory | `respiratory_rate` |
 | Vitals            | `blood_oxygen`, `blood_pressure`, `glucose`, `heartrate`, `hrv` |
 | Wellness          | `stress_level` |
-| Body              | `fat`, `weight`
+| Body              | `fat`, `weight` |
 | Lab Testing       | `cholesterol`, `igg`, `ige` |
 
 ### Interval Timeseries types
@@ -50,6 +50,7 @@ Each value is associated with a half-open time interval (`[start, end[`).
 | Category          | Resources |
 | ----------------- | --------- |
 | Activity          | `calories_active`, `calories_basal`, `distance`, `floors_climbed`, `steps` |
+| Body              | `body_temperature`, `body_temperature_delta` |
 | Cardiorespiratory | `vo2_max` |
 | Sleep             | `hypnogram` |
 | Nutrition         | `water`, `caffeine` |
