remove duplicated response structure

--- a/docs/api-reference/org-management/team-data-pull-preferences/get-team-data-pull-preferences.mdx
+++ b/docs/api-reference/org-management/team-data-pull-preferences/get-team-data-pull-preferences.mdx
@@ -11,68 +11,9 @@ curl --request GET \
 ```
 </RequestExample>
 
-## Overview
-
-See your team's data pull preferences for each provider.
+<Info>
 The endpoint will return the default vital settings if no custom preferences are set.
-
-## Response Structure
-
-<ResponseField name="data_pull_preferences" type="object[]" required>
-  An array containing team data pull preferences.
-
-  <Expandable defaultOpen>
-    <ResponseField name="team_id" type="string" required>
-      The unique identifier of the team.
-    </ResponseField>
-
-    <ResponseField name="providers" type="Map<string, object>" required>
-      A map where each key-value pair describes the historical pull preferences of a specific provider.
-
-      <Expandable defaultOpen>
-        <ResponseField name="{PROVIDER_SLUG}" type="object" required>
-            The historical pull preferences of a specific provider, keyed by the provider slug.
-
-            <ResponseField name="default" type="object" required>
-                The default historical pull preferences for this provider.
-
-                <Expandable defaultOpen>
-                    <ResponseField name="historical_days_to_pull" type="number">
-                        The default number of days to pull historical data.
-                    </ResponseField>
-
-                    <ResponseField name="historical_days_to_pull_limit" type="number">
-                        The maximum supported number of days to pull historical data.
-                    </ResponseField>
-                </Expandable>
-            </ResponseField>
-
-            <ResponseField name="resource_overrides" type="Map<string, object>">
-                A map where each key-value pair describes the historical pull preferences of a specific resource.
-                These will override the default preferences.
-
-                <ResponseField name="{RESOURCE}" type="object" required>
-                    The historical pull preferences of a resource with this provider, keyed by the resource type.
-
-                    <Expandable defaultOpen>
-                        <ResponseField name="historical_days_to_pull" type="number">
-                            The number of days to pull historical data for this resource.
-                        </ResponseField>
-
-                        <ResponseField name="historical_days_to_pull_limit" type="number">
-                            The maximum supported number of days to pull historical data for this resource.
-                        </ResponseField>
-                    </Expandable>
-                </ResponseField>
-            </ResponseField>
-        </ResponseField>
-      </Expandable>
-    </ResponseField>
-  </Expandable>
-  <ResponseField name="next_cursor" type="string">
-    The cursor to fetch the next page of data.
-  </ResponseField>
-</ResponseField>
+</Info>
 
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
 
