--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -3,6 +3,20 @@ title: "Providers"
 ---
 
 
+### Menstrual Cycle Tracking (July 24)
+
+Menstrual cycle tracking data can now be collected through the Apple HealthKit and Android
+Health Connect integrations.
+
+<Accordion icon="tag" iconType="duotone" title="Details" defaultOpen>
+Ask for data permission on the `MenstrualCycle` resource from the user through the Vital Health SDK.
+
+Check out the [Get Menstrual Cycles](/api-reference/menstrual-cycle/get-summary) endpoint and
+the [Menstrual Cycle data events](/event-catalog/daily.data.menstrual_cycle.created) in the Event Catalog
+for more information.
+</Accordion>
+
+
 ### Steps count in workouts (May 24)
 
 Workouts now include the total steps count during the session (if available).
