Update Event Catalog from 797a6267975f017e722c37d6e872546523f2152c

--- a/docs/event-catalog/daily.data.body_temperature_delta.updated.mdx
+++ b/docs/event-catalog/daily.data.body_temperature_delta.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -134,7 +134,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "19ca9bc6-26f5-4f8e-bb42-9e425c7dad51"
+    "user_id": "47562b08-a75d-49d1-afd3-4d1f40694688"
   },
   "event_type": "daily.data.body_temperature_delta.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
