--- a/docs/event-catalog/daily.data.calories_active.created.mdx
+++ b/docs/event-catalog/daily.data.calories_active.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "19b7e71a-4822-4509-b1b5-6f13eb422f00"
+    "user_id": "2c29e4fb-d688-4433-ac61-5ad3ba944e0f"
   },
   "event_type": "daily.data.calories_active.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
