--- a/docs/event-catalog/daily.data.cholesterol.updated.mdx
+++ b/docs/event-catalog/daily.data.cholesterol.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -141,7 +141,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "919b94a4-cb7e-447c-b30a-71e272b92252"
+    "user_id": "c11cce27-fd2a-4e8d-8652-dfbafde63081"
   },
   "event_type": "daily.data.cholesterol.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
