--- a/docs/event-catalog/daily.data.distance.created.mdx
+++ b/docs/event-catalog/daily.data.distance.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "eb7eefb8-0ccc-4bf8-8125-e17377df40d7"
+    "user_id": "6d497d6f-8b5b-4587-b07c-142acc003248"
   },
   "event_type": "daily.data.distance.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
