--- a/docs/event-catalog/daily.data.fat.updated.mdx
+++ b/docs/event-catalog/daily.data.fat.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "7527c07e-c2aa-40d6-a38a-9e27fa02d250"
+    "user_id": "cd36214c-81dd-4840-8377-306877f090e7"
   },
   "event_type": "daily.data.fat.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
