--- a/docs/event-catalog/daily.data.floors_climbed.created.mdx
+++ b/docs/event-catalog/daily.data.floors_climbed.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "5dc9a623-c38e-48b3-8290-57c69fdb7268"
+    "user_id": "77e2e94e-892b-463d-bbd9-d64e2f913e59"
   },
   "event_type": "daily.data.floors_climbed.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
