--- a/docs/event-catalog/daily.data.glucose.created.mdx
+++ b/docs/event-catalog/daily.data.glucose.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "6d29f29e-c4fb-4cf8-b435-19f4bda791f4"
+    "user_id": "262a2ec3-177c-466f-be64-0da061cd416b"
   },
   "event_type": "daily.data.glucose.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
