--- a/docs/event-catalog/daily.data.heartrate.updated.mdx
+++ b/docs/event-catalog/daily.data.heartrate.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "a0d0b8c7-03cb-48a5-95e1-2d2da7d82ff0"
+    "user_id": "dcc0bfdb-33ff-44ca-810c-18cc169c2d3c"
   },
   "event_type": "daily.data.heartrate.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
