--- a/docs/event-catalog/daily.data.hrv.created.mdx
+++ b/docs/event-catalog/daily.data.hrv.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "bbf099d4-3d21-428b-84cf-c0c5237df133"
+    "user_id": "46d3ec70-92e2-4cec-b257-9b460c50782f"
   },
   "event_type": "daily.data.hrv.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
