--- a/docs/event-catalog/daily.data.hrv.updated.mdx
+++ b/docs/event-catalog/daily.data.hrv.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "54d54958-43e4-4035-9b1a-457269187abf"
+    "user_id": "c646ed76-9b78-45f6-b982-220fb8305047"
   },
   "event_type": "daily.data.hrv.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
