--- a/docs/event-catalog/daily.data.hypnogram.created.mdx
+++ b/docs/event-catalog/daily.data.hypnogram.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "6d2d107b-6ccf-4a8c-95e5-badbc3c2c8f3"
+    "user_id": "947de8c6-a849-4cca-8d41-b497e1252cb3"
   },
   "event_type": "daily.data.hypnogram.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
