--- a/docs/event-catalog/daily.data.steps.updated.mdx
+++ b/docs/event-catalog/daily.data.steps.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "88bedfc6-08fd-4592-8fe1-5d00ecaddfd2"
+    "user_id": "7b26d63b-b6d4-4c13-ab7e-be68c772424a"
   },
   "event_type": "daily.data.steps.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
