--- a/docs/event-catalog/daily.data.vo2_max.updated.mdx
+++ b/docs/event-catalog/daily.data.vo2_max.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "e2043efb-1903-446f-8147-6ef8291a4999"
+    "user_id": "203d615d-ef87-47ad-8b8d-4bfcac42b2a9"
   },
   "event_type": "daily.data.vo2_max.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
