--- a/docs/event-catalog/daily.data.water.created.mdx
+++ b/docs/event-catalog/daily.data.water.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "313cb2b2-814f-4a1b-b7db-31f4e5247cab"
+    "user_id": "64c9fc9d-6c75-49b7-9634-ec245615f900"
   },
   "event_type": "daily.data.water.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
