--- a/docs/event-catalog/daily.data.weight.created.mdx
+++ b/docs/event-catalog/daily.data.weight.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "127712b3-e8d1-439d-b630-2f7aa2f4f476"
+    "user_id": "68977a33-210f-4fb0-949e-930ec18b6fbe"
   },
   "event_type": "daily.data.weight.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
