--- a/docs/event-catalog/daily.data.blood_oxygen.created.mdx
+++ b/docs/event-catalog/daily.data.blood_oxygen.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "cec530d9-363a-41cc-bd19-f0eca3175c56"
+    "user_id": "b360cf3c-07ee-4d3b-9d80-55e15d952681"
   },
   "event_type": "daily.data.blood_oxygen.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
