--- a/docs/event-catalog/daily.data.blood_oxygen.updated.mdx
+++ b/docs/event-catalog/daily.data.blood_oxygen.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "a6c03ed3-3add-4715-8749-b67b503efcf8"
+    "user_id": "fdc1c6cf-50ef-4a67-bb52-2495826c063e"
   },
   "event_type": "daily.data.blood_oxygen.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
