--- a/docs/event-catalog/daily.data.body_temperature.created.mdx
+++ b/docs/event-catalog/daily.data.body_temperature.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -134,7 +134,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "be5bb6e3-c137-402a-a2c4-82ae37aa642c"
+    "user_id": "3009de4d-b0de-4246-a37b-bb011e577570"
   },
   "event_type": "daily.data.body_temperature.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
