--- a/docs/event-catalog/daily.data.body_temperature.updated.mdx
+++ b/docs/event-catalog/daily.data.body_temperature.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -134,7 +134,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "26bb3726-f558-4779-b908-7365b2fc783e"
+    "user_id": "5a7826ba-d3ac-4fd2-8983-5aeb3ca88c2b"
   },
   "event_type": "daily.data.body_temperature.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
