--- a/docs/event-catalog/daily.data.body_temperature_delta.created.mdx
+++ b/docs/event-catalog/daily.data.body_temperature_delta.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -134,7 +134,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "d60ad327-4efa-4818-9c05-749e35baf485"
+    "user_id": "883bd4ac-265f-4bfb-a4d8-546d809038ac"
   },
   "event_type": "daily.data.body_temperature_delta.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
