--- a/docs/event-catalog/daily.data.caffeine.created.mdx
+++ b/docs/event-catalog/daily.data.caffeine.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "cb419e8e-9dba-4df3-bc68-cbcf3c4cc191"
+    "user_id": "19ec646e-a88c-4fdf-ac3f-a9f2eb9a7eac"
   },
   "event_type": "daily.data.caffeine.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
