--- a/docs/event-catalog/daily.data.caffeine.updated.mdx
+++ b/docs/event-catalog/daily.data.caffeine.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "a066727c-0a38-4711-aceb-cb7a216f0b54"
+    "user_id": "ba6d5df5-5b13-4c1b-b2fb-cc8e80424c33"
   },
   "event_type": "daily.data.caffeine.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
