--- a/docs/event-catalog/daily.data.calories_active.updated.mdx
+++ b/docs/event-catalog/daily.data.calories_active.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "b1173e03-fcda-4d3b-8491-b63c64951b97"
+    "user_id": "e36f50a5-ab42-4e5b-a1fe-8e2e74956041"
   },
   "event_type": "daily.data.calories_active.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
