--- a/docs/event-catalog/daily.data.calories_basal.created.mdx
+++ b/docs/event-catalog/daily.data.calories_basal.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "08f284b2-afbe-457c-bd06-a35aa4dab022"
+    "user_id": "f729fba7-3546-40aa-8210-13dd5300e75f"
   },
   "event_type": "daily.data.calories_basal.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
