--- a/docs/event-catalog/daily.data.calories_basal.updated.mdx
+++ b/docs/event-catalog/daily.data.calories_basal.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "6646942d-4811-45a0-b420-168a6e849993"
+    "user_id": "ebf9a1b8-2e6b-408b-99c0-e23397966b2b"
   },
   "event_type": "daily.data.calories_basal.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
