--- a/docs/event-catalog/daily.data.cholesterol.created.mdx
+++ b/docs/event-catalog/daily.data.cholesterol.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -141,7 +141,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "ae62ce40-e4d6-4c50-a56f-03140cbc4a7d"
+    "user_id": "0b169b75-42b1-4dfe-8b05-e2c30f46f441"
   },
   "event_type": "daily.data.cholesterol.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
