--- a/docs/event-catalog/daily.data.distance.updated.mdx
+++ b/docs/event-catalog/daily.data.distance.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "74e5ead9-80f7-4600-8cf1-9484eea11ad8"
+    "user_id": "8f4243fc-54a7-4fcc-ad61-687aeb8d92ec"
   },
   "event_type": "daily.data.distance.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
