--- a/docs/event-catalog/daily.data.fat.created.mdx
+++ b/docs/event-catalog/daily.data.fat.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "bbe97922-f84c-43f0-b40a-3fd0034ad02a"
+    "user_id": "9721ce74-28e8-417c-ae26-5a44b680a1c2"
   },
   "event_type": "daily.data.fat.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
