--- a/docs/event-catalog/daily.data.floors_climbed.updated.mdx
+++ b/docs/event-catalog/daily.data.floors_climbed.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "ffcb006e-9864-47c8-990c-9d30932b95cf"
+    "user_id": "3e7235dd-0f57-418a-84dd-41226333ef0f"
   },
   "event_type": "daily.data.floors_climbed.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
