--- a/docs/event-catalog/daily.data.glucose.updated.mdx
+++ b/docs/event-catalog/daily.data.glucose.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "3693cb58-4ff1-44b5-ac15-4ce326330e2b"
+    "user_id": "4e340d62-1b74-475b-8f7e-4c7ce3eba6dc"
   },
   "event_type": "daily.data.glucose.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
