--- a/docs/event-catalog/daily.data.hypnogram.updated.mdx
+++ b/docs/event-catalog/daily.data.hypnogram.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "54343562-a16e-4147-8040-8804379413e7"
+    "user_id": "c1c90e1f-39aa-4814-9995-acc003edb730"
   },
   "event_type": "daily.data.hypnogram.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
