--- a/docs/event-catalog/daily.data.ige.created.mdx
+++ b/docs/event-catalog/daily.data.ige.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "05f2ce6a-e256-4adf-a4ee-8e21b3b04a71"
+    "user_id": "a993fe41-5bc0-48f0-9dfc-2f0729d71442"
   },
   "event_type": "daily.data.ige.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
