--- a/docs/event-catalog/daily.data.ige.updated.mdx
+++ b/docs/event-catalog/daily.data.ige.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "d1c6bc88-e9e2-4450-a4d5-da8171f2e38b"
+    "user_id": "7eb19a24-ecd1-4fe6-96dd-af00d5f6a539"
   },
   "event_type": "daily.data.ige.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
