--- a/docs/event-catalog/daily.data.igg.created.mdx
+++ b/docs/event-catalog/daily.data.igg.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "330a6db3-2e25-4017-9f49-60bf802fc5db"
+    "user_id": "fb9199cd-c78d-480f-90f4-9378992bfbe6"
   },
   "event_type": "daily.data.igg.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
