--- a/docs/event-catalog/daily.data.igg.updated.mdx
+++ b/docs/event-catalog/daily.data.igg.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "65f5af75-e5a3-4632-bde2-ea55c3acdb95"
+    "user_id": "f0b620d2-bcd3-46e4-9b61-c912c1c019bd"
   },
   "event_type": "daily.data.igg.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
