--- a/docs/event-catalog/daily.data.respiratory_rate.created.mdx
+++ b/docs/event-catalog/daily.data.respiratory_rate.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "c0d18435-b32f-463f-843d-c1f126b96e43"
+    "user_id": "30a8a4e5-791f-46f4-90a2-e8310f221e8d"
   },
   "event_type": "daily.data.respiratory_rate.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
