--- a/docs/event-catalog/daily.data.respiratory_rate.updated.mdx
+++ b/docs/event-catalog/daily.data.respiratory_rate.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "2cc17238-e0f4-4210-b2a4-3266eb105952"
+    "user_id": "1df9cbdc-caa2-4d67-8866-8029fd66a2fd"
   },
   "event_type": "daily.data.respiratory_rate.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
