--- a/docs/event-catalog/daily.data.steps.created.mdx
+++ b/docs/event-catalog/daily.data.steps.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "076fb227-04bd-40d0-ac4c-4922aacb70c7"
+    "user_id": "05eaf93b-1572-4ba0-ae19-2ef5de548598"
   },
   "event_type": "daily.data.steps.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
