--- a/docs/event-catalog/daily.data.stress_level.created.mdx
+++ b/docs/event-catalog/daily.data.stress_level.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -119,7 +119,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "777cc257-b820-487f-bf8f-65b49046cca1"
+    "user_id": "efa1d472-5ee4-4c11-93d9-ca2851901bdd"
   },
   "event_type": "daily.data.stress_level.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
