--- a/docs/event-catalog/daily.data.stress_level.updated.mdx
+++ b/docs/event-catalog/daily.data.stress_level.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -119,7 +119,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "e6dcbbe3-acb8-45b4-aba8-16a8236398f1"
+    "user_id": "cda6e484-7ec7-41d4-8766-1e0d138023cc"
   },
   "event_type": "daily.data.stress_level.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
