--- a/docs/event-catalog/daily.data.vo2_max.created.mdx
+++ b/docs/event-catalog/daily.data.vo2_max.created.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "e677fa39-5c2a-47d2-9fa1-e0b6addda47a"
+    "user_id": "7b4c0320-187a-452e-84a2-21976e06cc01"
   },
   "event_type": "daily.data.vo2_max.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
