--- a/docs/event-catalog/daily.data.water.updated.mdx
+++ b/docs/event-catalog/daily.data.water.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "6afc181b-7f21-417a-a99e-aa71cab3b28c"
+    "user_id": "3412586a-bd49-415d-a4ab-20052bb4e3e8"
   },
   "event_type": "daily.data.water.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
