--- a/docs/event-catalog/daily.data.weight.updated.mdx
+++ b/docs/event-catalog/daily.data.weight.updated.mdx
@@ -36,7 +36,7 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="anyOf | null">
-The reading type of the measurement. This is applicable only to Cholesterol, IGG and IGE.
+The reading type of the measurement. This is applicable only to Cholesterol, IGG, IGE and InsulinInjection.
 Any of:
 * string
 * null
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "8a788e24-6590-4d46-9283-d7281d1b4170"
+    "user_id": "662015d1-70d3-4855-bd47-407fb9a0cf85"
   },
   "event_type": "daily.data.weight.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
