--- a/docs/event-catalog/labtest.order.created.mdx
+++ b/docs/event-catalog/labtest.order.created.mdx
@@ -371,6 +371,14 @@ Any of:
 * string
 * null
 </ResponseField>
+<ResponseField name="billing_type" type="enum<string> | null">
+Available options: `client_bill`, `commercial_insurance`, `patient_bill_passthrough`.
+</ResponseField>
+<ResponseField name="icd_codes" type="anyOf | null">
+Any of:
+* array
+* null
+</ResponseField>
 </Expandable>
 </ResponseField>
 <ResponseExample>
@@ -417,8 +425,8 @@ Any of:
         "status": "collecting_sample.testkit.transit_customer"
       }
     ],
-    "health_insurace_id": "bbd41223-e6eb-4283-80d1-e8c4a387db55",
-    "id": "61643f0d-7318-47e9-b301-722854951d6b",
+    "health_insurace_id": "b2b9d29e-7325-4c7d-b99d-7d64def3fcd5",
+    "id": "55bd3452-3656-4a1a-8290-3035891cf7c8",
     "lab_test": {
       "description": "Cholesterol test",
       "method": "testkit",
@@ -442,9 +450,9 @@ Any of:
     "requisition_form_url": "https://www.example.com",
     "sample_id": "123456789",
     "status": "collecting_sample",
-    "team_id": "faa564e4-5c95-46d7-8e0a-43e53710a815",
+    "team_id": "82755355-a6bb-4153-b1fb-4be94cb117b3",
     "updated_at": "2020-01-01T00:00:00Z",
-    "user_id": "ca62955d-d296-4931-b51f-542d6aa43d19"
+    "user_id": "1df54f19-4016-46e2-8c71-7498b06275bc"
   },
   "event_type": "labtest.order.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
