--- a/docs/changelog/core/dashboard.mdx
+++ b/docs/changelog/core/dashboard.mdx
@@ -2,41 +2,88 @@
 title: "Dashboard"
 ---
 
-### Enhanced Order Page Search and Filtering (Aug 15)
+### Improved Order Search experience (Aug 2024)
 
-The order page now includes robust search and filtering capabilities, enabling users to efficiently locate specific orders and data.
+We havei improved the search and filtering capabilities in the Orders page, helping you quickly locate specific orders and information.
 
 <Accordion icon="magnifying-glass" iconType="duotone" title="Details" defaultOpen>
 
-We have added a new search bar that will support filtering by the following. Only one search bar filter can be active at any given time.
+#### Basic filters
 
-- Search bar filtering:
-    - Patient or recipient (in the case of at-home kits) first or last name
-    - Patient email
-    - Patient date of birth in the YYYY-MM-DD format.
-        - E.g. “1988” will filter for all patients born in 1988. “1988-03” will filter for all patients born in March of 1988 and “1988-03-07” will filter for all patients born on March 7th, 1988.
-    - User ID
-    - Client user ID
-    - Order ID
-    - Order status
+Order searching now supports these filtering criteria: 
 
-We have also added the ability to filter by date or date range for the created date or the date of the last event update. Note that the dates will filter based on the created date in the UTC timezone. These filters will stack as an “AND” with the previous filters. E.g. “patient’s name is ‘John’ and order was created in the last 30 days”. If both created at and last updated at date filters are active they will stack as an “AND” with all other filters.
+- Patient or Recipient (in the case of at-home kits) — First or Last name
+- Patient Email
+- Patient Date of Birth
+    - in the YYYY-MM-DD format.
+    - e.g., “1988” will filter for all patients born in 1988.
+    - e.g., “1988-03” will filter for all patients born in March of 1988 and “1988-03-07” will filter for all patients born on March 7th, 1988.
+- User ID
+- Client User ID
+- Order ID
+- Order Status
 
-- Date filtering:
-    - Filter on the created date of the order.
-        - For tests that are scheduled in the future, the creation date of the order, not the scheduled date is utilized in the filter.
-    - Filter on the updated date of the order
-        - This allows you to filter based on all the orders that have last changed state in a particular time. Note that this filters only on the last time an order changed state.
+<Info>
+Only one Basic filter can be active at any given time. This is because Basic filters are
+mutually exclusive with each other.
+</Info>
 
-In addition we will support filtering by a number of more advanced fields. These filters stack as an AND in addition to all previous filters, with one important exception. If multiple filters from the same field are active (e.g. filtering for both completed status and partial results status) those filters will stack as an OR. That means selecting multiple filters on the order status will filter for all of the statuses selected.
+### Date filters
 
-- Advanced filtering fields:
-    - Status
-        - This is the current status of the order. Note that some statuses are unique to a collection modality such as mobile phlebotomy or self-collected test kits.
-        - You can have multiple Status filters active simultaneously.
-    - Order type
-        - This allows you to filter based on the order type - at-home phlebotomy, walk-in test, at home test kit.
-        - You can have multiple Status filters active simultaneously
-    - Activation type
-        - This allows you to filter specifically for tests that are scheduled in the future (Activation Type = Scheduled) or test kits that were either not scheduled, or were scheduled in some date in the past (Activation type = Current).
+On top of the basic filters, you can now filter by date range based on either:
+
+- the Order Creation date 
+    - For scheduled tests, the order creation date is considered instead of the scheduled date.
+
+- the Order Last Updated date
+    - This allows you to filter orders based on the date at which the order status was last updated.
+
+Dates are currently filtered with respect to the UTC timezone.
+
+### Status filters
+
+Filter based on the most recent status of the order. Note that some statuses are unique to a collection modality such as mobile phlebotomy or self-collected test kits.
+    
+<Info>
+You can apply multiple Status filters at the same time. These stack as a logical OR among themselves.
+</Info>
+
+### Order Type filters
+
+Filter based on the order type - at-home phlebotomy, walk-in test, at home test kit.
+
+<Info>
+You can apply multiple Order Type filters at the same time. These stack as a logical OR among themselves.
+</Info>
+
+### Activation Type filters
+
+Filter specifically for tests that are scheduled in the future (Activation Type = Scheduled) or test kits that were either not scheduled, or were scheduled in some date in the past (Activation type = Current).
+
 </Accordion>
+
+
+### Improved User Search and Introspection experience (Jun 2024)
+
+The Users page in the Vital Dashboard is now a search-first experience with more filtering and sorting options
+available. You can now also click on specific users to inspect device connection status and the patient details.
+
+<Accordion icon="magnifying-glass" iconType="duotone" title="Details" defaultOpen>
+
+Find your user by typing their Client User ID or Vital User ID into the search bar. For lab testing users: Name, Email and Phone Number are also supported.
+
+Click on a user to reveal the new User Details page:
+
+
+#### The General tab
+
+Shows an overview of all patient details and user settings associated with the Vital User ID.
+
+#### The Connections tab
+
+Provides device connection availability and data ingestion insights of the Vital User.
+
+You can also obtain this same information programmatically through the [Introspection API](/api-reference/introspection/user-resources).
+
+</Accordion>
+
