--- a/docs/changelog/core/dashboard.mdx
+++ b/docs/changelog/core/dashboard.mdx
@@ -4,7 +4,7 @@ title: "Dashboard"
 
 ### Improved Order Search experience (Aug 2024)
 
-We havei improved the search and filtering capabilities in the Orders page, helping you quickly locate specific orders and information.
+We have improved the search and filtering capabilities in the Orders page, helping you quickly locate specific orders and information.
 
 <Accordion icon="magnifying-glass" iconType="duotone" title="Details" defaultOpen>
 
