Bit more editorial spinkles

--- a/docs/changelog/core/dashboard.mdx
+++ b/docs/changelog/core/dashboard.mdx
@@ -42,7 +42,7 @@ Dates are currently filtered with respect to the UTC timezone.
 
 ### Status filters
 
-Filter based on the most recent status of the order. Note that some statuses are unique to a collection modality such as mobile phlebotomy or self-collected test kits.
+Filter based on the most recent status of the order. Note that some statuses are unique to a collection modality such as Mobile Phlebotomy or Self-Collected Test Kits.
     
 <Info>
 You can apply multiple Status filters at the same time. These stack as a logical OR among themselves.
@@ -50,7 +50,7 @@ You can apply multiple Status filters at the same time. These stack as a logical
 
 ### Order Type filters
 
-Filter based on the order type - at-home phlebotomy, walk-in test, at home test kit.
+Filter based on the order type: At-Home Phlebotomy, Walk-In Test, At-Home Test Kit.
 
 <Info>
 You can apply multiple Order Type filters at the same time. These stack as a logical OR among themselves.
@@ -58,7 +58,10 @@ You can apply multiple Order Type filters at the same time. These stack as a log
 
 ### Activation Type filters
 
-Filter specifically for tests that are scheduled in the future (Activation Type = Scheduled) or test kits that were either not scheduled, or were scheduled in some date in the past (Activation type = Current).
+Filter for:
+
+1. Scheduled Orders that would not begin execution until the specified target date; or
+2. Current Orders that have been executed and are being fulfilled.
 
 </Accordion>
 
